@@ -1,3 +1,8 @@
+2015-09-10  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/67502
+	* c-c++-common/gomp/pr67502.c: New test.
+
 2015-09-09  Marek Polacek  <polacek@redhat.com>
 
 	Backport from mainline:
